Updated app name and favicon

--- a/client/src/app.html
+++ b/client/src/app.html
@@ -5,6 +5,9 @@
 	<meta charset="utf-8" />
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<title>Bidy</title>
+	<meta name="description" content="Your trusted marketplace for buying and selling | Bidy.in" />
+	<meta name="application-name" content="Bidy" />
 	%sveltekit.head%
 </head>
 
